# lab_programmazione

./: CMakeLists.txt  Category.h  CategoryCounter.h  Note.h  README.md  SpecialNotes.h  category.cpp  main.cpp
Category/: findByKey.cpp  findByKeyBody.cpp  findByKeyTitle.cpp  getSpecialSize.cpp  removeNoteByTitle.cpp
test/: test_Category.cpp  test_CategoryCounter.cpp  test_Note.cpp  test_main.cpp
